--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.12.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^9.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
